--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/Aero3DDev/remix-address-book",
   "name": "remix-address-book",
   "private": true,
   "type": "module",
@@ -6,7 +7,9 @@
     "build": "cross-env NODE_ENV=production react-router build",
     "dev": "react-router dev",
     "start": "cross-env NODE_ENV=production react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "dependencies": {
     "@react-router/node": "^7.1.5",
@@ -25,6 +28,7 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "cross-env": "^7.0.3",
+    "gh-pages": "^6.3.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11"
   },
