Add new homepage to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Aero3DDev/remix-address-book",
+  "homepage": "https://aero3ddev.github.io/remix-address-book",
   "name": "remix-address-book",
   "private": true,
   "type": "module",
