--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aero3ddev.github.io/react-router-address-book/",
+  "homepage": "https://github.com/Aero3DDev/react-router-address-book/",
   "name": "react-router-address-book",
   "private": true,
   "type": "module",
