--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://aero3ddev.github.io/react-router-address-book",
   "name": "react-router-address-book",
   "private": true,
   "type": "module",
@@ -7,9 +6,7 @@
     "build": "cross-env NODE_ENV=production react-router build",
     "dev": "react-router dev",
     "start": "cross-env NODE_ENV=production react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
     "@react-router/node": "^7.1.5",
@@ -28,7 +25,6 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "cross-env": "^7.0.3",
-    "gh-pages": "^6.3.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11"
   },
